Fixed scroll spacing on mobile viewports

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -33,7 +33,7 @@ header {
   }
 
   .jumbo-section{
-    padding-top: 40%;
+    padding-top: 50px;
   }
 }
 
